# rust-tensor

./: Cargo.toml  README.md  project_decision.txt  review.md
src/: main.rs
src/tensor/: convenience.rs  definitions.rs  device.rs  errors.rs  graph.rs  impl_generics.rs  internals.rs  iter.rs  layout.rs  macros.rs  mat.rs  mkl_extension.rs  mod.rs  promise.rs  slice.rs  storage.rs  tensor.rs  traits.rs
src/tensor/mem_formats/: layout.rs  mod.rs  slice.rs
src/tensor/ops/: fusion.rs  impl_compute_op.rs  impl_layout.rs  impl_op.rs  mod.rs  reusable.rs
