[package]
name = "simple_tensor"
version = "0.1.0"
edition = "2024"

[features]
debug_only_check = []

[dependencies]
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
intel-mkl-sys = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
cblas = "0.5.0"
cblas-sys = "0.3.0"
lapacke = "0.5.0"
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
