[package]
name = "simple_tensor"
version = "0.1.0"
edition = "2024"

[features]
default = ["tracing"]
debug_only_check = []
tracing = []

[dev-dependencies]

[dependencies]
tracing = "0.1.44"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
intel-mkl-sys = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
cblas = "0.5.0"
cblas-sys = "0.3.0"
lapacke = "0.5.0"
tracing-subscriber = "0.3.23"
